Fixed Z-Index on fork me link

--- a/assets/main.css
+++ b/assets/main.css
@@ -2,6 +2,14 @@ body {
     color: #777;
 }
 
+#forkme {
+    z-index: 10;
+    position: absolute;
+    top: 0;
+    right: 0;
+    border: 0;
+}
+
 .pure-img-responsive {
     max-width: 100%;
     height: auto;
